media queries: max-width 767px: Update index.html to make register section responsive

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <!-- your users -->
-                <div class="features-section__card row">
+                <div class="features-section__card do">
                     <div class="content-wrapper">
                         <div class="features-section__about">
                             <h4>Your Users</h4>
@@ -91,15 +91,19 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- register section -->
+                <section class="register-section">
+                    <div class="register-section__wrapper">
+                        <h4>Ready To Build Your Community?</h4>
+                        <div class="cta-button">
+                            <button type="button" class="button large">Get Started For Free</button>
+                        </div>
+                    </div>
+                </section>
             </section>
 
-            <!-- register section -->
-            <section class="register-section">
-                <h4>Ready To Build Your Community?</h4>
-                <div class="cta-button">
-                    <button type="button" class="button large">Get Started For Free</button>
-                </div>
-            </section>
+            
 
             <!-- foooter section -->
             <footer class="primary-footer">
