media queries: max-width 767px: make footer section responsive

--- a/index.html
+++ b/index.html
@@ -115,18 +115,24 @@
                     <div class="footer__first-column">
                         <div class="footer__first-column-wrapper">
                             <div class="location">
-                                <img src="images/icon-location.svg" alt="location-icon">
+                                <div class="location__icon">
+                                    <img src="images/icon-location.svg" alt="location-icon" width="17px">
+                                </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                                     incididunt ut labore et dolore magna aliqua
                                 </p>
                             </div>
                             <div class="telephone">
-                                <img src="images/icon-phone.svg" alt="phone-icon">
+                                <div class="telephone__icon">
+                                    <img src="images/icon-phone.svg" alt="phone-icon" width="20px">
+                                </div>
                                 <p>+1-543-123-4567</p>
                             </div>
                             <div class="email">
-                                <img src="images/icon-email.svg" alt="email-icon">
+                                <div class="email__icon">
+                                    <img src="images/icon-email.svg" alt="email-icon" width="23px">
+                                </div>
                                 <p>example@huddle.com</p>
                             </div>
                         </div>
